--- a/package.json
+++ b/package.json
@@ -10,9 +10,24 @@
   },
   "homepage": "https://github.com/Gaweph/p5-typescript-starter#readme",
   "devDependencies": {
+    "@types/node": "^13.1.8",
     "@types/p5": "^0.9.0",
-    "npm-run-all": "^4.1.5",
     "browser-sync": "^2.26.7",
-    "typescript": "^3.6.3"
+    "gulp": "^4.0.2",
+    "gulp-header": "^2.0.9",
+    "gulp-rename": "^2.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "merge2": "^1.3.0",
+    "npm-run-all": "^4.1.5",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-stream": "^5.2.1",
+    "webpack": "latest"
+  },
+  "dependencies": {
+    "alpeventemitter": "^2.0.1",
+    "p5": "^0.10.2"
   }
 }
